force-app/main/default/objects/Hotel__c/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GHAZIABAD</fullName>
            </value>
            <value>
                <fullName>G.B.NAGAR</fullName>
            </value>
            <value>
                <fullName>UDAIPUR</fullName>
            </value>
            <value>
                <fullName>JAIPUR</fullName>
            </value>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>PUNE</fullName>
            </value>
            <value>
                <fullName>BANGALORE</fullName>
            </value>
            <value>
                <fullName>MYSORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>