force-app/main/default/objects/Hotel__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTTAR PRADESH</fullName>
            </value>
            <value>
                <fullName>MAHARASTRA</fullName>
            </value>
            <value>
                <fullName>RAJISTHAN</fullName>
            </value>
            <value>
                <fullName>KARNATKA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>